--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -77,7 +77,7 @@ body {
 .header {
     padding: 10px 0;
     margin: 0 auto;
-    background-color: #81B9BA;
+    background-color: #b15f09;
 }
 
 .logo-icon {
