--- a/src/MtgBundle/Resources/views/Card/card.html.twig
+++ b/src/MtgBundle/Resources/views/Card/card.html.twig
@@ -55,12 +55,12 @@
                     <tr>
                         <td>kleuren:</td>
                         <td>
+                            {{ source('images/fire.svg') }}
                             {% for color in card.colors %}
                                 { {{ color }} }
                             {% endfor %}
                         </td>
                     </tr>
-
                 </table>
             </td>
         </tr>
