--- a/src/MtgBundle/Resources/views/Card/card.html.twig
+++ b/src/MtgBundle/Resources/views/Card/card.html.twig
@@ -1,69 +1,38 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <table class="table">
-        <tr>
-            <td>
-                <img src="{{ card.imgUrl }}">
-            </td>
-            <td valign="top">
-                <table class="table">
-                    <tr>
-                        <td>Naam:</td>
-                        <td>{{ card.name }}</td>
-                    </tr>
-                    <tr>
-                        <td>Collectie ID:</td>
-                        <td>{{ card.collectionId }}</td>
-                    </tr>
-                    <tr>
-                        <td>set:</td>
-                        <td>{{ card.cardSet.name }}</td>
-                    </tr>
-                    <tr>
-                        <td>mana:</td>
-                        <td>
-                            {{ card.manaCost|symbol }}
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>zeldzaamheid:</td>
-                        <td>{{ card.rarity }}</td>
-                    </tr>
-                    <tr>
-                        <td>type:</td>
-                        <td>{{ card.type }}</td>
-                    </tr>
-                    <tr>
-                        <td>subtype:</td>
-                        <td>{{ card.subtype }}</td>
-                    </tr>
-                    <tr>
-                        <td>inhoudstekst:</td>
-                        <td>{{ card.oracleText|symbol }}</td>
-                    </tr>
-                    <tr>
-                        <td>Extra tekst:</td>
-                        <td>{{ card.flavorText }}</td>
-                    </tr>
-                    <tr>
-                        <td>power:</td>
-                        <td>{{ card.power }}</td>
-                    </tr>
-                    <tr>
-                        <td>toughness:</td>
-                        <td>{{ card.toughness }}</td>
-                    </tr>
-                    <tr>
-                        <td>kleuren:</td>
-                        <td>
-                            {% for color in card.colors %}
-                                <img class="symbol" src="{{ asset('images/symbols/mana/' ~ color ~'.svg') }}">
-                            {% endfor %}
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
+    <div class="container"><h2>{{ card.name }} - {{ card.type }} — {{ card.subtype }}</h2></div>
+
+    <div id="exTab2" class="container">
+        <ul class="nav nav-tabs">
+            <li class="active">
+                <a  href="#1" data-toggle="tab">Overview</a>
+            </li>
+            <li>
+                <a href="#2" data-toggle="tab">Ruling</a>
+            </li>
+            <li>
+                <a href="#3" data-toggle="tab">Pricing</a>
+            </li>
+            <li>
+                <a href="#4" data-toggle="tab">legality</a>
+            </li>
+        </ul>
+        <div class="tab-content ">
+            <div class="tab-pane active" id="1">
+                {% include 'MtgBundle:Card:overview.html.twig' with {'card': card} %}
+            </div>
+            <div class="tab-pane" id="2">
+                {% include 'MtgBundle:Card:ruling.html.twig' with {'ruling': rules } %}
+            </div>
+            <div class="tab-pane" id="3">
+                {% include 'MtgBundle:Card:pricing.html.twig' with {'pricing': pricing} %}
+            </div>
+            <div class="tab-pane" id="4">
+                {% include 'MtgBundle:Card:legality.html.twig' with {'legality': legality} %}
+            </div>
+        </div>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 {% endblock %}
