--- a/src/MtgBundle/Resources/views/Collection/create.html.twig
+++ b/src/MtgBundle/Resources/views/Collection/create.html.twig
@@ -5,7 +5,7 @@
     {{ dump(form) }}
     {{ form_start(form, {attr: {class: 'my-form-class'} }) }}
     {{ form_widget(form) }}
-    <input type="submit" class="btn" value="Create" />
+    <input type="submit" class="btn-default" value="Create" />
     {{ form_end(form) }}
 
 {% endblock %}
