--- a/src/MtgBundle/Resources/views/Card/overview.html.twig
+++ b/src/MtgBundle/Resources/views/Card/overview.html.twig
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-5">
-            <img src="{{ card.imgUrl }}">
+            <img src="{{ asset(card.imgUrl) }}">
         </div>
         <div class="col-md-5">
             <table class="table">
@@ -10,8 +10,16 @@
                     <td>{{ card.name }}</td>
                 </tr>
                 {% if is_granted('ROLE_USER') %}
+                    {% if collectedCount > 0 %}
+                        <tr>
+                            <td colspan="2">
+                                je hebt deze kaart {{ collectedCount }} keer!
+                            </td>
+                        </tr>
+                    {% endif %}
                     <tr>
-                        <td colspan="2"><a href="#">Deze heb ik!</a></td>
+                        <td colspan="2">
+                            <a href="{{ path('mtg_collection_addcardtocollection', {'setCode': card.cardSet.code, 'collectionId': card.CollectionId}) }}">Deze heb ik!</a></td>
                     </tr>
                 {%  endif %}
                 <tr>
@@ -47,7 +55,7 @@
                 {% if card.flavorText %}
                 <tr>
                     <td>Extra tekst:</td>
-                    <td>{{ card.flavorText }}</td>
+                    <td><i>{{ card.flavorText }}</i></td>
                 </tr>
                 {% endif %}
                 {% if card.power %}
