--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div class="search-bar">
-            <form method="POST" action="{{ path('mtg_card_searchcard', {'query': 'x'}) }}" class="js-sea-search sea-search">
+            <form method="POST" action="{{ path('mtg_card_searchcard') }}" class="js-sea-search sea-search">
                 <input type="search" name="q" placeholder="Zoek kaart in database" autocomplete="off" class="search-input">
             </form>
         </div>
