card wijzigingen, collection en deck toegevoegd

--- a/src/MtgBundle/Resources/views/Card/card.html.twig
+++ b/src/MtgBundle/Resources/views/Card/card.html.twig
@@ -9,23 +9,15 @@
                 <a  href="#1" data-toggle="tab">Overview</a>
             </li>
             <li>
-                <a href="#2" data-toggle="tab">Ruling</a>
-            </li>
-            <li>
-                <a href="#3" data-toggle="tab">legality</a>
+                <a href="#2" data-toggle="tab">legality</a>
             </li>
         </ul>
         <div class="tab-content ">
             <div class="tab-pane active" id="1">
                 {% include 'MtgBundle:Card:overview.html.twig' with {'card': card} %}
             </div>
-            {#
             <div class="tab-pane" id="2">
-                {% include 'MtgBundle:Card:ruling.html.twig' with {'ruling': rules } %}
-            </div>
-            #}
-            <div class="tab-pane" id="3">
-                {% include 'MtgBundle:Card:legality.html.twig' with {'legality': legality} %}
+                {% include 'MtgBundle:Card:legality.html.twig' with {'card': card } %}
             </div>
         </div>
     </div>
