--- a/src/MtgBundle/Resources/views/Card/legality.html.twig
+++ b/src/MtgBundle/Resources/views/Card/legality.html.twig
@@ -1,7 +1,7 @@
 <div class="col-md-2">
     <div class="list-group">
         {% set i = 0 %}
-    {% for key, value in legality %}
+    {% for key, value in card.legality %}
         {% if i == legality|length / 2 %}
     </div>
 </div>
