--- a/src/MtgBundle/Resources/views/Card/overview.html.twig
+++ b/src/MtgBundle/Resources/views/Card/overview.html.twig
@@ -19,7 +19,9 @@
                     {% endif %}
                     <tr>
                         <td colspan="2">
-                            <a href="{{ path('mtg_collection_addcardtocollection', {'setCode': card.cardSet.code, 'collectionId': card.CollectionId}) }}">Deze heb ik!</a></td>
+                            <a href="{{ path('mtg_collection_addcardtocollection', {'setCode': card.cardSet.code, 'collectionId': card.CollectionId}) }}">
+                                Deze heb ik! {% if collectedCount >0 %}(nog een keer!){% endif %}
+                            </a></td>
                     </tr>
                     <tr>
                         <td colspan="2">
@@ -32,10 +34,9 @@
                                     {% endfor %}
                                 </select>
                                 <select class="form-inline" name="amount">
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
+                                    {% for i in 1..collectedCount %}
+                                    <option value="{{ i }}">{{ i }}</option>
+                                    {% endfor %}
                                 </select>
                                 <input type="submit" class="form-inline" value="Voeg toe">
                         </td>
