--- a/src/MtgBundle/Resources/views/Deck/view.html.twig
+++ b/src/MtgBundle/Resources/views/Deck/view.html.twig
@@ -1,6 +1,54 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+<div class="container" id="deckviewtable">
+    <div class="row">
+        <div class="col-md-12"><h1>{{ deck.name }}</h1></div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+            <div class="col-md-6">
+            {% set currentType = '' %}
+            {% set i = 0 %}
+            {% for card in cards %}
+
+                {% if i == (cards|length / 2)|round(0, 'floor') %}
+                    </div><div class="col-md-6">
+                {% endif %}
+                {% set i = i + 1 %}
+                {% if currentType != card.card.type %}
+                    {% set currentType = card.card.type %}
+
+                    <div class="row">
+                        <div class="col-md-12">
+                            <h3>{{ currentType }}</h3>
+                        </div>
+                    </div>
+                {% endif %}
+
+
+                <div class="row">
+                <div class="col-md-6">
+                    <a data-toggle="popover" data-img="{{ card.card.cardSet.code }}/{{ card.card.collectionId }}"  href="{{ path('mtg_card_getcard', {'set': card.card.cardset.code, 'collectionId': card.card.collectionId}) }}">
+                        {{ card.amount }} x {{ card.card.name }}</a>
+                </div>
+                <div class="col-md-4">{{ card.card.manaCost|symbol }}</div>
+                </div>
+
+            {% endfor %}
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div id="div_chart"></div>
+            <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+            <script type="text/javascript">
+                {{ gc_draw(manaChart, 'div_chart') }}
+            </script>
+        </div>
+    </div>
+</div>
+
+{#
 
     <div class="table" id="deckviewtable">
             <div class="container"><h1>{{ deck.name }}</h1>
@@ -19,6 +67,9 @@
                 <div class="col-md-6">{{ card.card.manaCost|symbol }}</div>
             </div>
     {% endfor %}
+            <div class="row">
+
+            </div>
         </div>
-    </div>
+    </div>#}
 {% endblock %}
