--- a/src/MtgBundle/Resources/views/Card/searchresult.html.twig
+++ b/src/MtgBundle/Resources/views/Card/searchresult.html.twig
@@ -2,6 +2,7 @@
 
 {% block body %}
 
+    {% if results %}
     {% for result in results.data %}
         <a href="{{ path('mtg_card_getcard', {'set': result.set, 'collectionId': result.collector_number}) }}">
             {% if result.card_faces is defined %}
@@ -12,4 +13,5 @@
             <img src="{{ img }}">
         </a>
     {% endfor %}
+    {% endif %}
 {% endblock %}
