--- a/src/MtgBundle/Resources/views/Collection/cardrow.html.twig
+++ b/src/MtgBundle/Resources/views/Collection/cardrow.html.twig
@@ -2,17 +2,20 @@
     <td><a data-toggle="popover" data-img="{{ collectionRow.card.cardSet.code }}/{{ collectionRow.card.collectionId }}" href="{{ path('mtg_card_getcard', {'set': collectionRow.card.cardSet.code, 'collectionId': collectionRow.card.CollectionId}) }}">{{ collectionRow.card.name }} ({{ collectionRow.amount }})</a></td>
     <td><img class="symbol" src="{{ collectionRow.card.cardSet.icon }}"> {{ collectionRow.card.cardSet.name }}</td>
     <td>{{ collectionRow.card.rarity }}</td>
-    <td>
-        {% if collectionRow.card.colors is not empty %}
-            {% for color in collectionRow.card.colors %}
-                    <img class="symbol" src="{{ asset('images/symbols/mana/' ~ color ~'.svg') }}">
-            {% endfor %}
-        {% endif %}
-    </td>
-    <td>
-        <div class="btn-group btn-group-xs">
-            <a class="btn btn-success" href="{{ path('mtg_collection_addcardtocollection', {'setCode': collectionRow.card.cardSet.code, 'collectionId': collectionRow.card.CollectionId}) }}">+1</a>
-            <a class="btn btn-danger" href="{{ path('mtg_collection_removefromcollection', {'collectionId': collectionRow.id}) }}">x</a>
-        </div>
-    </td>
+    <td>{{ collectionRow.card.manaCost|symbol }}</td>
+    {% if app.user is not null and app.user is same as(collectionRow.user) %}
+        <td>
+            <div class="btn-group btn-group-xs">
+                <a class="btn btn-success" href="{{ path('mtg_collection_addcardtocollection', {'setCode': collectionRow.card.cardSet.code, 'collectionId': collectionRow.card.CollectionId}) }}">+1</a>
+                <a class="btn btn-danger" href="{{ path('mtg_collection_removefromcollection', {'collectionId': collectionRow.id}) }}">x</a>
+            </div>
+        </td>
+    {% elseif app.user is not null and app.user is not same as(collectionRow.user) %}
+        <td>
+            <div class="btn-group btn-group-xs">
+                <a class="btn btn-default" href="#"><img style="height: 15px;" src="{{ asset('images/symbols/icon__trade.svg') }}"></a>
+                <a class="btn btn-default" href="#"><img alt="wishlist" class="symbol" src="{{ asset('images/symbols/mana/T.svg') }}"></a>
+            </div>
+        </td>
+    {% endif %}
 </tr>
