--- a/src/MtgBundle/Resources/views/Deck/view.html.twig
+++ b/src/MtgBundle/Resources/views/Deck/view.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 <div class="container" id="deckviewtable">
     <div class="row">
-        <div class="col-md-12"><h1>{{ deck.name }}</h1></div>
+        <div class="col-md-12"><h1>{{ deck.name }} - {{ deck.user.userName }}</h1></div>
     </div>
     <div class="row">
         <div class="col-md-8">
@@ -47,29 +47,4 @@
         </div>
     </div>
 </div>
-
-{#
-
-    <div class="table" id="deckviewtable">
-            <div class="container"><h1>{{ deck.name }}</h1>
-            {% set currentType = '' %}
-    {% for card in cards %}
-    {% if currentType != card.card.type %}
-            </div><div class="col-md-6">
-            {% set currentType = card.card.type %}
-            <h3>{{ currentType }}</h3>
-            {% endif %}
-            <div class="row">
-                <div class="col-md-6">
-                    <a data-toggle="popover" data-img="{{ card.card.cardSet.code }}/{{ card.card.collectionId }}"  href="{{ path('mtg_card_getcard', {'set': card.card.cardset.code, 'collectionId': card.card.collectionId}) }}">
-                        {{ card.amount }} x {{ card.card.name }}</a>
-                </div>
-                <div class="col-md-6">{{ card.card.manaCost|symbol }}</div>
-            </div>
-    {% endfor %}
-            <div class="row">
-
-            </div>
-        </div>
-    </div>#}
 {% endblock %}
