--- a/src/MtgBundle/Resources/views/Collection/collection.html.twig
+++ b/src/MtgBundle/Resources/views/Collection/collection.html.twig
@@ -6,7 +6,7 @@
             <th>Naam</th>
             <th>Set</th>
             <th>Rarity</th>
-            <th>Kleuren</th>
+            <th>Mana</th>
             <th>x </th>
         </tr>
         </thead>
