--- a/src/MtgBundle/Resources/views/Deck/view.html.twig
+++ b/src/MtgBundle/Resources/views/Deck/view.html.twig
@@ -1,6 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+
 <div class="container" id="deckviewtable">
     <div class="row">
         <div class="col-md-12"><h1>{{ deck.name }} - {{ deck.user.userName }}</h1></div>
@@ -11,7 +12,6 @@
             {% set currentType = '' %}
             {% set i = 0 %}
             {% for card in cards %}
-
                 {% if i == (cards|length / 2)|round(0, 'floor') %}
                     </div><div class="col-md-6">
                 {% endif %}
@@ -29,8 +29,9 @@
 
                 <div class="row">
                 <div class="col-md-6">
+                    {{ card.amount }}
                     <a data-toggle="popover" data-img="{{ card.card.cardSet.code }}/{{ card.card.collectionId }}"  href="{{ path('mtg_card_getcard', {'set': card.card.cardset.code, 'collectionId': card.card.collectionId}) }}">
-                        {{ card.amount }} x {{ card.card.name }}</a>
+                         {{ card.card.name }}</a>
                 </div>
                 <div class="col-md-4">{{ card.card.manaCost|symbol }}</div>
                 </div>
@@ -48,5 +49,14 @@
             </script>
         </div>
     </div>
+    <div class="row text-center"><h2>Example hand</h2></div>
+    <div class="row">
+        {% for cards in exampleHand %}
+            <a href="{{ path('mtg_card_getcard', {'set': cards.cardset.code, 'collectionId': cards.collectionId}) }}">
+            <img style="width: 150px;" src="{{ asset(cards.imgUrl) }}">
+            </a>
+        {% endfor %}
+    </div>
 </div>
+    {% include '@FOSComment/Thread/async.html.twig' with {'id': deck.id, 'module': 'deck'} %}
 {% endblock %}
