Double faced kaarten ondersteuning ingebouwd

--- a/src/MtgBundle/Resources/views/Card/overview.html.twig
+++ b/src/MtgBundle/Resources/views/Card/overview.html.twig
@@ -1,105 +1,9 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-5">
-            <img src="{{ asset(card.imgUrl) }}">
-        </div>
-        <div class="col-md-5">
-            <table class="table">
-                <tr>
-                    <td>Naam:</td>
-                    <td>{{ card.name }}</td>
-                </tr>
-                {% if is_granted('ROLE_USER') %}
-                    {% if collectedCount > 0 %}
-                        <tr>
-                            <td colspan="2">
-                                je hebt deze kaart {{ collectedCount }} keer!
-                            </td>
-                        </tr>
-                    {% endif %}
-                    <tr>
-                        <td colspan="2">
-                            <a href="{{ path('mtg_collection_addcardtocollection', {'setCode': card.cardSet.code, 'collectionId': card.CollectionId}) }}">Deze heb ik!</a></td>
-                    </tr>
-                    <tr>
-                        <td colspan="2">
-                            <form action="{{ path('mtg_deck_addcard') }}" method="POST">
-                                <input type="hidden" name="set" value="{{ card.cardSet.code }}">
-                                <input type="hidden" name="card" value="{{ card.collectionId }}">
-                                Voeg kaart to aan: <select class="form-inline" name="deck">
-                                    {% for deck in decks %}
-                                        <option value="{{ deck.id }}" onclick="{{ path('mtg_deck_addcardtodeck', {'deckId': deck.id,'setCode': card.cardSet.code, 'cardCollectionId': card.collectionId}) }}">{{ deck.name }}</option>
-                                    {% endfor %}
-                                </select>
-                                <select class="form-inline" name="amount">
-                                    <option value="1">1</option>
-                                    <option value="2">2</option>
-                                    <option value="3">3</option>
-                                    <option value="4">4</option>
-                                </select>
-                                <input type="submit" class="form-inline" value="Voeg toe">
-                        </td>
-                    </tr>
-                {%  endif %}
-                <tr>
-                    <td>Collectie ID:</td>
-                    <td>{{ card.collectionId }}</td>
-                </tr>
-                <tr>
-                    <td>set:</td>
-                    <td><img class="symbol" src="{{ card.cardSet.icon }}"> {{ card.cardSet.name }}</td>
-                </tr>
-                <tr>
-                    <td>mana:</td>
-                    <td>
-                        {{ card.manaCost|symbol }}
-                    </td>
-                </tr>
-                <tr>
-                    <td>Rarity:</td>
-                    <td>{{ card.rarity }}</td>
-                </tr>
-                <tr>
-                    <td>type:</td>
-                    <td>{{ card.type }}</td>
-                </tr>
-                <tr>
-                    <td>subtype:</td>
-                    <td>{{ card.subtype }}</td>
-                </tr>
-                <tr>
-                    <td>inhoudstekst:</td>
-                    <td>{{ card.oracleText|symbol }}</td>
-                </tr>
-                {% if card.flavorText %}
-                <tr>
-                    <td>Extra tekst:</td>
-                    <td><i>{{ card.flavorText }}</i></td>
-                </tr>
-                {% endif %}
-                {% if card.power %}
-                <tr>
-                    <td>{% if card.type == 'Planeswalker' %}Loyalty{% else %}power{% endif %}:</td>
-                    <td>{{ card.power }}</td>
-                </tr>
-                {% endif %}
-                {% if card.toughness %}
-                <tr>
-                    <td>toughness:</td>
-                    <td>{{ card.toughness }}</td>
-                </tr>
-                {% endif %}
-                {% if card.colors is not empty %}
-                <tr>
-                    <td>kleuren:</td>
-                    <td>
-                        {% for color in card.colors %}
-                            <img class="symbol" src="{{ asset('images/symbols/mana/' ~ color ~'.svg') }}">
-                        {% endfor %}
-                    </td>
-                </tr>
-                {% endif %}
-            </table>
-        </div>
+        {% if card.faces|length == 1 %}
+            {% include 'MtgBundle:Card:singleFace.html.twig' %}
+        {% elseif card.faces|length == 2 %}
+            {% include 'MtgBundle:Card:doubleFace.html.twig' %}
+        {% endif %}
     </div>
 </div>
