--- a/src/MtgBundle/Resources/views/Card/card.html.twig
+++ b/src/MtgBundle/Resources/views/Card/card.html.twig
@@ -1,7 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container"><h1>{{ card.name }} - {{ card.type }} — {{ card.subtype }}</h1></div>
+    <div class="container"><h2>{{ card.name }}</h2>
+        <h4>{{ card.faces.first.type }} — {{ card.faces.first.subtype }}</h4></div>
 
     <div id="exTab2" class="container">
         <ul class="nav nav-tabs">
