--- a/src/MtgBundle/Resources/views/Collection/cardrow.html.twig
+++ b/src/MtgBundle/Resources/views/Collection/cardrow.html.twig
@@ -1,5 +1,5 @@
 <tr>
-    <td><a data-toggle="popover" data-img="{{ collectionRow.card.cardSet.code }}/{{ collectionRow.card.collectionId }}" href="{{ path('mtg_card_getcard', {'set': collectionRow.card.cardSet.code, 'collectionId': collectionRow.card.CollectionId}) }}">{{ collectionRow.card.name }} ({{ collectionRow.amount }})</a></td>
+    <td><a data-toggle="popover" data-img="{{ collectionRow.card.faces.first.ImgUrl }}" href="{{ path('mtg_card_getcard', {'set': collectionRow.card.cardSet.code, 'collectionId': collectionRow.card.CollectionId}) }}">{{ collectionRow.card.name }} ({{ collectionRow.amount }})</a></td>
     <td><img class="symbol" src="{{ collectionRow.card.cardSet.icon }}"> {{ collectionRow.card.cardSet.name }}</td>
     <td>{{ collectionRow.card.rarity }}</td>
     <td>{{ collectionRow.card.faces.first.manaCost|symbol }}</td>
