--- a/src/MtgBundle/Resources/views/Deck/view.html.twig
+++ b/src/MtgBundle/Resources/views/Deck/view.html.twig
@@ -16,8 +16,8 @@
                     </div><div class="col-md-6">
                 {% endif %}
                 {% set i = i + 1 %}
-                {% if currentType != card.card.type %}
-                    {% set currentType = card.card.type %}
+                {% if currentType != card.card.faces.first.type %}
+                    {% set currentType = card.card.faces.first.type %}
 
                     <div class="row">
                         <div class="col-md-12">
@@ -33,7 +33,7 @@
                     <a data-toggle="popover" data-img="{{ card.card.cardSet.code }}/{{ card.card.collectionId }}"  href="{{ path('mtg_card_getcard', {'set': card.card.cardset.code, 'collectionId': card.card.collectionId}) }}">
                          {{ card.card.name }}</a>
                 </div>
-                <div class="col-md-4">{{ card.card.manaCost|symbol }}</div>
+                <div class="col-md-4">{{ card.card.faces.first.manaCost|symbol }}</div>
                 </div>
 
             {% endfor %}
@@ -53,7 +53,7 @@
     <div class="row">
         {% for cards in exampleHand %}
             <a href="{{ path('mtg_card_getcard', {'set': cards.cardset.code, 'collectionId': cards.collectionId}) }}">
-            <img style="width: 150px;" src="{{ asset(cards.imgUrl) }}">
+            <img style="width: 150px;" src="{{ asset(cards.faces.first.imgUrl) }}">
             </a>
         {% endfor %}
     </div>
