--- a/src/MtgBundle/Resources/views/Collection/collection.html.twig
+++ b/src/MtgBundle/Resources/views/Collection/collection.html.twig
@@ -1,5 +1,16 @@
 {% extends 'base.html.twig' %}
 {% block body %}
+    <div id="exTab2" class="container">
+    <ul class="nav nav-tabs">
+        <li class="active">
+            <a  href="#1" data-toggle="tab">Overview</a>
+        </li>
+        <li>
+            <a href="#2" data-toggle="tab">export</a>
+        </li>
+    </ul>
+    <div class="tab-content ">
+    <div class="tab-pane active" id="1">
     <table id="collectionTable" class="table table-striped table-bordered">
         <thead>
         <tr>
@@ -21,4 +32,8 @@
                } %}
         {% endfor %}
     </table>
+    </div>
+    <div class="tab-pane" id="2">
+        <a href="{{ path('mtg_collection_exportcollection') }}">export results</a>
+    </div>
 {% endblock %}
