--- a/src/MtgBundle/Resources/views/Deck/view.html.twig
+++ b/src/MtgBundle/Resources/views/Deck/view.html.twig
@@ -30,7 +30,7 @@
                 <div class="row">
                 <div class="col-md-6">
                     {{ card.amount }}
-                    <a data-toggle="popover" data-img="{{ card.card.cardSet.code }}/{{ card.card.collectionId }}"  href="{{ path('mtg_card_getcard', {'set': card.card.cardset.code, 'collectionId': card.card.collectionId}) }}">
+                    <a data-toggle="popover" data-img="{{ card.card.faces.first.imgUrl }}"  href="{{ path('mtg_card_getcard', {'set': card.card.cardset.code, 'collectionId': card.card.collectionId}) }}">
                          {{ card.card.name }}</a>
                 </div>
                 <div class="col-md-4">{{ card.card.faces.first.manaCost|symbol }}</div>
