--- a/src/MtgBundle/Resources/views/Collection/collection.html.twig
+++ b/src/MtgBundle/Resources/views/Collection/collection.html.twig
@@ -16,6 +16,7 @@
         <tr>
             <th>Naam</th>
             <th>Set</th>
+            <th style="display:none;">Set</th>
             <th>Rarity</th>
             <th>Mana</th>
             <th>x </th>
