--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -24,9 +24,9 @@
                 <li>
                     {% if app.user is not null and fos_message_nb_unread() > 0 %}
                         <a href="{{ path('mtg_user_profile', {'userName': app.user.username }) }}">je hebt {{ fos_message_nb_unread() }} ongelezen berichten</a>
-                        <a href="http://127.0.0.1:8000/logout">Logout</a>
+                        <a href="{{ path('fos_user_security_logout') }}">Logout</a>
                     {% else %}
-                        <a href="http://127.0.0.1:8000/login">Login</a>
+                        <a href="{{ path('fos_user_security_login') }}">Login</a>
                     {% endif %}
                 </li>
             </ul>
